[package]
name = "rust-download-subtitles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
lazy_format = "2.0.0"
log = "0.4.17"
ron = "0.8.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"

[dependencies.flexi_logger]
version = "0.23.3"
features = ["async"]

[dependencies.reqwest]
version = "0.11.11"
features = ["json"] # The json feature is used for sending requests.

# Thanks to sleep_until and mpsc, we prefer Tokio over async-std and smol 2022-09-20
[dependencies.tokio]
version = "1.21.0"
features = ["full"]
