[package]
name = "rust-download-subtitles"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lazy_format = "2.0.0"
log = "0.4.17"
ron = "0.8.0"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"

[dependencies.flexi_logger]
version = "0.27.2"
features = ["async"]

[dependencies.reqwest]
version = "0.11.17"
features = ["json"] # The json feature is used for sending requests.

# Thanks to sleep_until and mpsc, we prefer Tokio over async-std and smol 2022-09-20
[dependencies.tokio]
version = "1.28.0"
features = ["full"]
